OPA/constraints/container_memory_cpu_ratio.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimitsRatio
metadata:
  name: container-must-follow-ratio
spec:
  enforcementAction: deny
  match:
    namespaces:
      - hallo
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    ratio: "1.5"
