OPA/constraints/container_memory_cpu_ratio_global_audit.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimitsRatio
metadata:
  name: container-must-follow-ratio-global
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    ratio: "1.5"
