OPA/constraints/deny-all.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAll
metadata:
  name:   zeigen
spec:
  match:
    namespaces:
    - "nofuture" 
    scope: "Namespaced"
