OPA/constraints/du_kannst_mich_mal.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDuKannstMichMal
metadata:
  name: keinelust
spec:
  match:
    namespaces:
    - "nofuture" 
    scope: "Namespaced"
