OPA/constraints/labels_must_be_set_on_all_namespaces.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: labelsmustbesetonallnamespaces
spec:
  #enforcementAction: dryrun
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Namespace"]
  parameters:
    labels: ["billing","juhu"]
