OPA/constraints/labels_must_be_set_regex.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: musthavesomelabels
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - 'devopscon'
  parameters:
    labels: ["devopscon","jax"]
    message: "hee  brauche labels"
